--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="banner">
             <div>
                 <h3 class="banner-sub-title">Hi, I am</h3>
-                <hi class="banner-title">Mary Hardy</hi>
+                <h1 class="banner-title">Mary Hardy</h1>
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                 <button class="primary-btn"> <i class="fa-solid fa-download"></i> Download CV</button>
                 <button class="secondary-btn"> <i class="fa-solid fa-phone"></i> Contact</button>
